# agent-firewall

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  VISION.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
alembic/: env.py
alembic/versions/: 20260310_0001_initial_schema.py  20260310_0002_policy_resource_lists.py
docs/: adoption.md  architecture.md  authorization.md  development.md  examples.md  execution.md  integrations.md  observability.md  policies.md  policy-workflow.md  positioning.md  reliability.md  security.md  server.md
examples/: langchain_wrapper.py  openai_agents_wrapper.py  sdk_guarded_tool.py  shared.py
scripts/: bootstrap_dev.py  verify_stack.py
seed/: dev_seed.json
src/agent_firewall/: __init__.py  auth.py  cache.py  config.py  container.py  executor.py  health.py  management.py  middleware.py  observability.py  policy.py  reliability.py  sdk.py  server.py  service.py
src/agent_firewall/api/: app.py
src/agent_firewall/integrations/: __init__.py  langchain.py  openai_agents.py
src/agent_firewall/models/: audit.py  common.py  config.py  policy.py  tooling.py
src/agent_firewall/repositories/: base.py  memory.py  postgres.py
tests/: test_api.py  test_auth.py  test_execution.py  test_full_stack_integration.py  test_persistence_integration.py  test_policy_validation.py  test_postgres_repository.py  test_reliability.py  test_sdk.py
